{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 392,
  "lineage": "d79ca729-eee5-815c-937c-a137370084ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df9fec644a79d421",
            "association_id": "eipassoc-05cbb9628bde64007",
            "domain": "vpc",
            "id": "eipalloc-0df9fec644a79d421",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01aeb2c0a2e6ab348",
            "private_dns": "ip-10-255-0-42.ec2.internal",
            "private_ip": "10.255.0.42",
            "public_dns": "ec2-3-212-99-62.compute-1.amazonaws.com",
            "public_ip": "3.212.99.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "REDACRE-eip"
            },
            "tags_all": {
              "Name": "REDACRE-eip",
              "Project": "REDACRE"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:internet-gateway/igw-0b2aa9357d55839d5",
            "id": "igw-0b2aa9357d55839d5",
            "owner_id": "322501053055",
            "tags": {
              "Name": "REDACRE-internet-gateway"
            },
            "tags_all": {
              "Name": "REDACRE-internet-gateway",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:loadbalancer/app/alb20220331114048787600000006/0c242f27ca1b0b9e",
            "arn_suffix": "app/alb20220331114048787600000006/0c242f27ca1b0b9e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb20220331114048787600000006-2039415903.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:322501053055:loadbalancer/app/alb20220331114048787600000006/0c242f27ca1b0b9e",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "alb20220331114048787600000006",
            "name_prefix": "alb",
            "security_groups": [
              "sg-0f3f8bac81fc6d2b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c5a850013a019cb"
              },
              {
                "subnet_id": "subnet-04bd8183c94706ae4"
              }
            ],
            "subnets": [
              "subnet-00c5a850013a019cb",
              "subnet-04bd8183c94706ae4"
            ],
            "tags": {
              "Name": "REDACRE-alb"
            },
            "tags_all": {
              "Name": "REDACRE-alb",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http_5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:listener/app/alb20220331114048787600000006/0c242f27ca1b0b9e/b0f54cbeb9713c30",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg-api-5000/121d42917d35c45c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322501053055:listener/app/alb20220331114048787600000006/0c242f27ca1b0b9e/b0f54cbeb9713c30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:loadbalancer/app/alb20220331114048787600000006/0c242f27ca1b0b9e",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Project": "REDACRE"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.aws_tg-api-5000",
            "aws_security_group.allow_http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:listener/app/alb20220331114048787600000006/0c242f27ca1b0b9e/830826ee3b97e021",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg/aafb10d357c5bb5b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322501053055:listener/app/alb20220331114048787600000006/0c242f27ca1b0b9e/830826ee3b97e021",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:loadbalancer/app/alb20220331114048787600000006/0c242f27ca1b0b9e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Project": "REDACRE"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.aws_tg",
            "aws_security_group.allow_http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg/aafb10d357c5bb5b",
            "arn_suffix": "targetgroup/awstg/aafb10d357c5bb5b",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg/aafb10d357c5bb5b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "awstg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "REDACRE-alb"
            },
            "tags_all": {
              "Name": "REDACRE-alb",
              "Project": "REDACRE"
            },
            "target_type": "ip",
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_tg-api-5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg-api-5000/121d42917d35c45c",
            "arn_suffix": "targetgroup/awstg-api-5000/121d42917d35c45c",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/stats",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:322501053055:targetgroup/awstg-api-5000/121d42917d35c45c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "awstg-api-5000",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "REDACRE-alb"
            },
            "tags_all": {
              "Name": "REDACRE-alb",
              "Project": "REDACRE"
            },
            "target_type": "ip",
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df9fec644a79d421",
            "connectivity_type": "public",
            "id": "nat-0ed519ae6edf1a772",
            "network_interface_id": "eni-01aeb2c0a2e6ab348",
            "private_ip": "10.255.0.42",
            "public_ip": "3.212.99.62",
            "subnet_id": "subnet-04bd8183c94706ae4",
            "tags": {
              "Name": "REDACRE-natgw"
            },
            "tags_all": {
              "Name": "REDACRE-natgw",
              "Project": "REDACRE"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:route-table/rtb-0e417854eb6a7384b",
            "id": "rtb-0e417854eb6a7384b",
            "owner_id": "322501053055",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed519ae6edf1a772",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "REDACRE-private-route table"
            },
            "tags_all": {
              "Name": "REDACRE-private-route table",
              "Project": "REDACRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:route-table/rtb-023e0b105b32fab78",
            "id": "rtb-023e0b105b32fab78",
            "owner_id": "322501053055",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2aa9357d55839d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "REDACRE-public-route table"
            },
            "tags_all": {
              "Name": "REDACRE-public-route table",
              "Project": "REDACRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd60fc940960422d",
            "route_table_id": "rtb-0e417854eb6a7384b",
            "subnet_id": "subnet-06ab43aeecf715ff2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c8f6796002974fc",
            "route_table_id": "rtb-0e417854eb6a7384b",
            "subnet_id": "subnet-0b0eb8dfaefe36803"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3c2de9cd74ffecf",
            "route_table_id": "rtb-023e0b105b32fab78",
            "subnet_id": "subnet-04bd8183c94706ae4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da836a5f97e6d25",
            "route_table_id": "rtb-023e0b105b32fab78",
            "subnet_id": "subnet-00c5a850013a019cb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ecs_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:security-group/sg-0d968dab83c873d66",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbout trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d968dab83c873d66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow trafic on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow trafic from resources within this sg",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "REDACRE-allow_containerTrafic20220331121155393500000001",
            "name_prefix": "REDACRE-allow_containerTrafic",
            "owner_id": "322501053055",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "REDACRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:security-group/sg-0f3f8bac81fc6d2b5",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbout trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3f8bac81fc6d2b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP trafic",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP trafic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "REDACRE-allow_http20220331114034064200000001",
            "name_prefix": "REDACRE-allow_http",
            "owner_id": "322501053055",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "REDACRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:security-group/sg-0a564789e8c73016e",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbout trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a564789e8c73016e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP trafic on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3f8bac81fc6d2b5"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "REDACRE-allow_http20220331114034064600000003",
            "name_prefix": "REDACRE-allow_http",
            "owner_id": "322501053055",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "REDACRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_80_rule_in_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow trafic on port 80",
            "from_port": 80,
            "id": "sgrule-2966711363",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d968dab83c873d66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ecs_80",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_80_rule_in_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow trafic from resources within this sg",
            "from_port": 0,
            "id": "sgrule-3198581029",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d968dab83c873d66",
            "self": true,
            "source_security_group_id": "sg-0d968dab83c873d66",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ecs_80",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_80_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbout trafic",
            "from_port": 0,
            "id": "sgrule-851497362",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d968dab83c873d66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ecs_80",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_rule_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP trafic",
            "from_port": 80,
            "id": "sgrule-3823909989",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f3f8bac81fc6d2b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_rule_in-5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP trafic",
            "from_port": 5000,
            "id": "sgrule-3147148697",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f3f8bac81fc6d2b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_rule_in-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP trafic on port 5000",
            "from_port": 5000,
            "id": "sgrule-2177351879",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a564789e8c73016e",
            "self": false,
            "source_security_group_id": "sg-0f3f8bac81fc6d2b5",
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_http-api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbout trafic",
            "from_port": 0,
            "id": "sgrule-2235928292",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f3f8bac81fc6d2b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_rule_out-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbout trafic",
            "from_port": 0,
            "id": "sgrule-799384191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a564789e8c73016e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http-api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:subnet/subnet-06ab43aeecf715ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab43aeecf715ff2",
            "ipv6_cidr_block": "2600:1f18:6a8:1202::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-08aa9ce29de960e1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "322501053055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "REDACRE-private-us-east-1a"
            },
            "tags_all": {
              "Name": "REDACRE-private-us-east-1a",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:subnet/subnet-0b0eb8dfaefe36803",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0eb8dfaefe36803",
            "ipv6_cidr_block": "2600:1f18:6a8:1203::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02c1cf3d3e77ac42e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "322501053055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "REDACRE-private-us-east-1b"
            },
            "tags_all": {
              "Name": "REDACRE-private-us-east-1b",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:subnet/subnet-04bd8183c94706ae4",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd8183c94706ae4",
            "ipv6_cidr_block": "2600:1f18:6a8:1200::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-011644fc955fed4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322501053055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "REDACRE-public-us-east-1a"
            },
            "tags_all": {
              "Name": "REDACRE-public-us-east-1a",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:subnet/subnet-00c5a850013a019cb",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c5a850013a019cb",
            "ipv6_cidr_block": "2600:1f18:6a8:1201::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0ddc1080a91f93ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322501053055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "REDACRE-public-us-east-1b"
            },
            "tags_all": {
              "Name": "REDACRE-public-us-east-1b",
              "Project": "REDACRE"
            },
            "vpc_id": "vpc-03af6d5453051f739"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322501053055:vpc/vpc-03af6d5453051f739",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-07c3b45f848bdfdb9",
            "default_route_table_id": "rtb-05ad1bd7d78dce76a",
            "default_security_group_id": "sg-0b0b9c7b956d34da3",
            "dhcp_options_id": "dopt-0dd53f98ea5db9a14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03af6d5453051f739",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-07468776d4e5ed63d",
            "ipv6_cidr_block": "2600:1f18:6a8:1200::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ad1bd7d78dce76a",
            "owner_id": "322501053055",
            "tags": {
              "Name": "REDACRE-vpc"
            },
            "tags_all": {
              "Name": "REDACRE-vpc",
              "Project": "REDACRE"
            }
          }
        }
      ]
    }
  ]
}